
<resources>
    <string name="app_name">NotifyNinja</string>
    <string name="channel_reminders">Reminders</string>
    <string name="channel_desc">Reminder notifications</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="frequency">Frequency</string>
    <string name="none">None</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="payments">Payments</string>
    <string name="classes">Classes</string>
    <string name="journeys">Journeys</string>
    <string name="exercise">Exercise</string>
    <string name="other">Other</string>
</resources>
